--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
+    <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#ffc40d">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
 <div class="container">
@@ -14,12 +20,15 @@
         Aan het laden...
     </div>
     <div id="loaded">
-        <div>
+        <div class="top">
             <h1>Shirley heeft nog <span id="turfjes">...</span> turfjes</h1>
             <h1>De eerstvolgende die ze moet wegwerken is voor:  <span id="reden">...</span></h1>
         </div>
-        <div id="next"></div>
+        <div class="bottom">
+            <div id="next"></div>
+        </div>
     </div>
+    <div id="image-container"><img id="ketel" src="images/ketel1.svg"></div>
 </div>
 <script>
     const xhttp = new XMLHttpRequest();
